# zenoh_dart_dev

./: .claudeignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.claude/skills/role-ca/: SKILL.md
development/: flutter-project-ideas.md  research-ffi-reception-patterns.md
development/c-shim/: CA-C_shim_proof.md  C_shim_audit.md
development/design/: c-shim-architecture-rationale.md  dart-client-integration-testing.md  fix-rtld-local-interprocess-crash.md  flutter-counter-app-design.md  phase-03-pub-revised.md  phase-04-shm-revised.md  phase-05-scout-info-revised.md  phase-06-get-queryable-revised.md  phase-07-shm-get-queryable-revised.md  phase-09-pull-subscriber-revised.md  phase-10-querier-revised.md  phase-11-liveliness-revised.md  phase-12-ping-pong-revised.md  phase-13-shm-ping-revised.md  phase-14-throughput-revised.md  phase-16-bytes-revised.md  phase-17-storage-revised.md  phase-18-advanced-revised.md  xplr-counter-migration-analysis.md
development/dev-roles/: ca-architect.md  ci-implementer.md  cp-planner.md  ship-crew-roster.md
development/phases/: phase-01-put-delete.md  phase-02-sub.md  phase-03-pub.md  phase-04-shm-pub-sub.md  phase-05-scout-info.md  phase-06-get-queryable.md  phase-07-shm-get-queryable.md  phase-08-channels.md  phase-09-pull.md  phase-10-querier.md  phase-11-liveliness.md  phase-12-ping-pong.md  phase-13-shm-ping.md  phase-14-throughput.md  phase-15-shm-throughput.md  phase-16-bytes.md  phase-17-storage.md  phase-18-advanced.md  phase-P1-packaging.md
development/planning/: 20260325_0816_phase6_get_queryable.md  20260325_1322_phase7_shm_get_queryable.md  20260325_2044_phase9_pull_subscriber.md  20260326_0451_phase10_querier.md  20260326_0849_phase11_liveliness.md  20260326_1338_phase12_ping_pong.md  20260327_0530_phase13_shm_ping.md  20260330_2100_phase16_bytes.md  20260330_2230_phase17_storage.md  20260330_2300_phase18_advanced_pub_sub.md  20260330_phase14_throughput.md
development/prompts/: cf-flutter-examples.md  cg-flutter-projects.md
development/proposals/: cmake-unified-build-system.md  dev-prod-sync.md  product-workshop-split.md
development/research/: zenoh-shm-android-infeasibility.md
development/review-rubrics/: phase-06-get-queryable.md
development/reviews/: audit-phases-0-5-vs-zenoh-c-cpp.md  c-shim-audit.md  cli-examples-cross-language-review.md  pr3-phase1-verification.md  rtld-local-crash-investigation.md
development/tdd-prompts/: cb-cz-packaging-prompt.md
docs/: flutter-project-ideas.md  synthesis-phases-vs-patterns.md
docs/c-shim/: CC-C_shim_audit.md
docs/design/: android-native-lib-support.md  cross-cutting-patterns.md  dart-client-integration-testing.md  fix-rtld-local-interprocess-crash.md  flutter-counter-app-design.md  flutter-counter-design-v2.md  phase-03-pub-revised.md  phase-04-shm-revised.md  phase-05-scout-info-revised.md
docs/dev-roles/: cb-packaging.md  ci-implementer.md  cp-planner.md
docs/phases/: phase-00-bootstrap.md  phase-01-put-delete.md  phase-02-sub.md  phase-03-pub.md  phase-04-shm-pub-sub.md  phase-05-scout-info.md  phase-06-get-queryable.md  phase-07-shm-get-queryable.md  phase-08-channels.md  phase-09-pull.md  phase-10-querier.md  phase-11-liveliness.md  phase-12-ping-pong.md  phase-13-shm-ping.md  phase-14-throughput.md  phase-15-shm-throughput.md  phase-16-bytes.md  phase-17-storage.md  phase-18-advanced.md  phase-P1-packaging.md
docs/prompts/: cg-flutter-projects.md  ci-fix-logging-init.md
docs/rationale/: why-not-zenoh-dart-pub-dev.md
docs/reviews/: audit-c-shim-architecture.md  c-shim-audit.md  cli-examples-cross-language-review.md  interprocess-crash-fix-review.md  rtld-local-crash-investigation.md
docs/tdd-prompts/: cb-packaging-advisor.md
experiments/hooks-bundling/: README.md  context.md  design.md  prior-analysis.md  spec-a1-prebuilt-dlopen.md  spec-a2-prebuilt-native.md  spec-b1-cbuilder-dlopen.md  spec-b2-cbuilder-native.md  spec-migration.md  synthesis.md
package/: analysis_options.yaml  ffigen.yaml  pubspec.yaml
package/example/: README.md  z_advanced_pub.dart  z_advanced_sub.dart  z_bytes.dart  z_get.dart  z_get_liveliness.dart  z_get_shm.dart  z_info.dart  z_liveliness.dart  z_ping.dart  z_ping_shm.dart  z_pong.dart  z_pub_shm.dart  z_pub_shm_thr.dart  z_pub_thr.dart  z_pull.dart  z_querier.dart  z_queryable.dart  z_queryable_shm.dart  z_storage.dart  z_sub.dart  z_sub_liveliness.dart  z_sub_thr.dart
package/hook/: build.dart
package/lib/: zenoh.dart
package/test/: advanced_publisher_test.dart  advanced_subscriber_test.dart  bytes_test.dart  bytes_writer_test.dart  encoding_test.dart  get_queryable_advanced_test.dart  get_queryable_test.dart  keyexpr_test.dart  liveliness_test.dart  publisher_test.dart  pull_subscriber_test.dart  querier_test.dart  query_enums_test.dart  queryable_test.dart  reply_test.dart  serializer_test.dart  session_test.dart  shm_get_queryable_test.dart  shm_provider_test.dart  subscriber_test.dart  throughput_integration_test.dart  z_advanced_pub_cli_test.dart  z_advanced_sub_cli_test.dart  z_bytes_cli_test.dart  z_delete_cli_test.dart  z_get_cli_test.dart  z_get_liveliness_cli_test.dart  z_get_shm_cli_test.dart  z_info_cli_test.dart  z_liveliness_cli_test.dart  z_ping_cli_test.dart  z_ping_shm_cli_test.dart  z_pong_cli_test.dart  z_pub_shm_cli_test.dart  z_pub_shm_thr_cli_test.dart  z_pub_thr_cli_test.dart  z_pull_cli_test.dart  z_put_cli_test.dart  z_querier_cli_test.dart  z_queryable_cli_test.dart  (+5 more)
planning/: 20260227_1958_phase0_bootstrap.md  20260304_0000_phase1_put_delete.md  20260305_0000_phase2_callback_subscriber.md  20260306_0000_phase3_declared_publisher.md  20260310_1320_experiment_b2_cbuilder_native.md  20260311_2000_fix_rtld_local_interprocess_crash.md  20260311_2100_fix_native_interprocess_crash.md
planning/experiments/: 20260310_1036_experiment_a2_prebuilt_native.md  20260310_1223_experiment_b1_cbuilder_dlopen.md
scripts/: build_zenoh_android.sh  sync-to-prod.sh
src/: CMakeLists.txt  zenoh_dart.c  zenoh_dart.h
(+74 files in other folders)
